{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 108,
  "lineage": "e2232068-8477-275e-4c45-9bc35e9e59f4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0742b4e673072066f",
            "arn": "arn:aws:ec2:us-east-1:203781287669:instance/i-0d28ba17af36e4a91",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d28ba17af36e4a91",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "newkeypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03bd69c71e55099cc",
            "private_dns": "ip-10-20-0-30.ec2.internal",
            "private_ip": "10.20.0.30",
            "public_ip": "54.166.202.246",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ea0d1b5de6a71983",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-05ba508c9e424beec"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d3a043c0351dc25f",
            "tags": {
              "Name": "myinstance1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05ba508c9e424beec"
            ]
          },
          "dependencies": [
            "aws_security_group.mysg1",
            "aws_subnet.pub1vpc1",
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myins2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0742b4e673072066f",
            "arn": "arn:aws:ec2:us-east-1:203781287669:instance/i-0aa80674bdd4dc845",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aa80674bdd4dc845",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "newkeypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03d0096a7aa75ed77",
            "private_dns": "ip-10-40-0-189.ec2.internal",
            "private_ip": "10.40.0.189",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d2fc17a83d333785",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-01ba99d277ead323a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f588277bbf2ba52f",
            "tags": {
              "Name": "myinstance2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01ba99d277ead323a"
            ]
          },
          "dependencies": [
            "aws_security_group.mysg2",
            "aws_subnet.pub2vpc2",
            "aws_vpc.main2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203781287669:internet-gateway/igw-0437894464a84c75d",
            "id": "igw-0437894464a84c75d",
            "owner_id": "203781287669",
            "tags": {
              "Name": "myigw1"
            },
            "vpc_id": "vpc-0bf5ba50bba661d66"
          },
          "dependencies": [
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "accpter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "10.40.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0907d8c28924ed5a91415821702",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0907d8c28924ed5a9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0dd9aa19eae6b7c51"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.custom_route",
            "aws_vpc.main1",
            "aws_vpc.main2",
            "aws_vpc_peering_connection.peering_conne"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "requester",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "10.20.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0138a831b66020854662290444",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0138a831b66020854",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0dd9aa19eae6b7c51"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.cus_route2",
            "aws_vpc.main1",
            "aws_vpc.main2",
            "aws_vpc_peering_connection.peering_conne"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cus_route2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203781287669:route-table/rtb-0138a831b66020854",
            "id": "rtb-0138a831b66020854",
            "owner_id": "203781287669",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "mycus_route2"
            },
            "vpc_id": "vpc-080e517b604f06425"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "custom_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203781287669:route-table/rtb-0907d8c28924ed5a9",
            "id": "rtb-0907d8c28924ed5a9",
            "owner_id": "203781287669",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0437894464a84c75d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mycustomroute"
            },
            "vpc_id": "vpc-0bf5ba50bba661d66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub1asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04dc63ac9fc928935",
            "route_table_id": "rtb-0138a831b66020854",
            "subnet_id": "subnet-0f588277bbf2ba52f"
          },
          "dependencies": [
            "aws_route_table.cus_route2",
            "aws_subnet.pub2vpc2",
            "aws_vpc.main2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubasso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad0ee4696f813e53",
            "route_table_id": "rtb-0907d8c28924ed5a9",
            "subnet_id": "subnet-0d3a043c0351dc25f"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.custom_route",
            "aws_subnet.pub1vpc1",
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203781287669:security-group/sg-05ba508c9e424beec",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ba508c9e424beec",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "mysg1",
            "name_prefix": "",
            "owner_id": "203781287669",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mysgdemo1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf5ba50bba661d66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203781287669:security-group/sg-01ba99d277ead323a",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01ba99d277ead323a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "mysg2",
            "name_prefix": "",
            "owner_id": "203781287669",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mysgdemo2"
            },
            "timeouts": null,
            "vpc_id": "vpc-080e517b604f06425"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub1vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203781287669:subnet/subnet-0d3a043c0351dc25f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.0.0/24",
            "id": "subnet-0d3a043c0351dc25f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "203781287669",
            "tags": {
              "Name": "subnet1"
            },
            "tags_all": {
              "Name": "subnet1"
            },
            "vpc_id": "vpc-0bf5ba50bba661d66"
          },
          "dependencies": [
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub2vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203781287669:subnet/subnet-0f588277bbf2ba52f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.40.0.0/24",
            "id": "subnet-0f588277bbf2ba52f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "203781287669",
            "tags": {
              "Name": "subnet2"
            },
            "tags_all": {
              "Name": "subnet2"
            },
            "vpc_id": "vpc-080e517b604f06425"
          },
          "dependencies": [
            "aws_vpc.main2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203781287669:vpc/vpc-0bf5ba50bba661d66",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-04fcfdfe979c6925f",
            "default_route_table_id": "rtb-091208229f828b50b",
            "default_security_group_id": "sg-066609648d0ce7065",
            "dhcp_options_id": "dopt-4a82a430",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0bf5ba50bba661d66",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-091208229f828b50b",
            "owner_id": "203781287669",
            "tags": {
              "Name": "myvpc-01"
            },
            "tags_all": {
              "Name": "myvpc-01"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203781287669:vpc/vpc-080e517b604f06425",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.40.0.0/16",
            "default_network_acl_id": "acl-0ecb4811681cba861",
            "default_route_table_id": "rtb-0a5e3eba6fb844669",
            "default_security_group_id": "sg-030ec182c065313b2",
            "dhcp_options_id": "dopt-4a82a430",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-080e517b604f06425",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a5e3eba6fb844669",
            "owner_id": "203781287669",
            "tags": {
              "Name": "myvpc-02"
            },
            "tags_all": {
              "Name": "myvpc-02"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "peering_conne",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0dd9aa19eae6b7c51",
            "peer_owner_id": "203781287669",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-080e517b604f06425",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "VPC Peering between vpc1 and vpc2"
            },
            "vpc_id": "vpc-0bf5ba50bba661d66"
          },
          "dependencies": [
            "aws_vpc.main1",
            "aws_vpc.main2"
          ]
        }
      ]
    }
  ]
}